@@ -1,3 +1,10 @@
+2005-01-26  Mike Kestner  <mkestner@novell.com>
+
+	* generator/*.cs : refactoring of Parameters class. Added IEnumerable
+	to Parameters and gracefully handle elem == null instead of special
+	casing parms == null all over the place. Parameter logic is now Count
+	driven. [Fixes #71750]
+
 2005-01-26  Dan Winship  <danw@novell.com>
 
 	* generator/Property.cs (Generate): Remove a redundant WriteLine (that
